# repo-template-python-fastapi

./: .dockerignore  .editorconfig  .env.dev  .env.example  .env.test  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DEV_PROMPT.md  Dockerfile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  mise.toml  pyproject.toml
.claude/: settings.json
.claude/commands/: add-adr.md  bump-image.md  deploy-test.md  ship.md  smoke.md
.claude/hooks/: format-python.ps1  pre-commit-secret-scan.ps1
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.json  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  ops_incident.yml
.github/workflows/: ci.yml  deploy-prod.yml  deploy-test.yml  release.yml  secret-scan.yml
docs/: README.md
docs/advanced-docs/: ops-patterns.md  self-hosting.md
docs/architecture/: ERD.md  SDD.md  data-flow.md  testing-strategy.md
docs/branding/: guidelines.md
docs/product/: BRD.md  PDD.md  PRD.md  use-cases.md
docs/runbooks/: incident-response.md  on-call.md  rollback.md
docs/user/: FAQ.md  getting-started.md  guides.md  troubleshooting.md
scripts/: export-openapi.py  scan-secrets.ps1
src/app/: main.py  storage.py
tests/: conftest.py  test_health.py
